// To Complie: 
// protoc --go_out=. --go_opt=paths=source_relative \                                                                                                                    ] 12:21 am
//     --go-grpc_out=. --go-grpc_opt=paths=source_relative \
//     ./opaque.proto

syntax = "proto3";
option go_package = "../opaque-service-protos/protos";

service OpaqueAuthService {
    rpc OpaqueRegistrationFlowRPC(stream RegistrationFlowMsg) returns (stream RegistrationFlowMsg);
}

message RegistrationFlowMsg {
    RegistrationFlowSteps step = 1;
    string gopaqueTypeGob = 2;
    string userID = 3;
}
enum RegistrationFlowSteps {
    INIT=0;
    INIT_ACK=1;
    COMPLETE=2;
    COMPLETE_ACK=3;
}